tests/ui/rfcs/rfc-2008-non-exhaustive/shadowed-non-exhaustive.stderr
error[E0004]: non-exhaustive patterns: `main::Shadowed::Foo` not covered
  --> $DIR/shadowed-non-exhaustive.rs:6:11
   |
LL |     match v {
   |           ^ pattern `main::Shadowed::Foo` not covered
   |
note: `main::Shadowed` defined here
  --> $DIR/shadowed-non-exhaustive.rs:10:10
   |
LL |     enum Shadowed {
   |          ^^^^^^^^
LL |         Foo,
   |         --- not covered
   = note: the matched value is of type `main::Shadowed`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~     match v {
LL +         Shadowed::Foo => todo!(),
LL +     }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
